# langchain-deep-research

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  STREAM-CUSTOM-DATA.md  STREAM-PROTOCOL.md  langgraph.json  pyproject.toml
open_deep_research/: api.py  configuration.py  deep_researcher.py  state.py
open_deep_research/tools/: __init__.py  pgvector.py
scripts/: pdf_chunk_count.py
src/open_deep_research/: api.py  configuration.py  deep_researcher.py  prompts.py  sse.py  state.py  stream_protocol.py  utils.py
src/open_deep_research/tools/: exa.py
tests/: evaluators.py  extract_langsmith_data.py  pairwise_evaluation.py  run_evaluate.py  supervisor_parallel_evaluation.py  test_azure_openai_env.py  test_exa_search.py  test_llm_token_tracing.py  test_pdf_chunk_count.py  test_stream_protocol.py  test_supervisor_correctness.py  test_utils_token_namespace.py
